--- a/index.html
+++ b/index.html
@@ -31,5 +31,30 @@
       
     </header>
 </div>
+
+<main class="section-container">
+    <section>
+        <div class="image-section">
+             <img src="images/team1.png">
+             <img src="images/team2.png">
+              </div>
+        <div class="image-section">
+            <img src="images/team3.png">
+            <img src="images/team4.png">
+        </div>
+        <div class="section-container-secondrow">
+            <h2 class="secondrow-title">Quick list <b>of Our</b>
+                <span>Features</span></h2>
+                <p class="secondrow-subtitle">There are many variations of passages of Lorem Ipsum available, 
+                    but the majority have suffered alteration in some form, by injected 
+                    humour, or randomised words which don't look even</p>
+                    <button class="secondrow-button">Explore More</button>
+
+        </div>
+       
+
+    </section>
+
+</main>
 </body>
 </html>
